[project]
name = "veriabyss"
version = "1.0.0"
description = "Unbreakable AI veracity oracle with AntiSIM v4.0 Abyss + VeriLock provenance"
authors = [{name = "Bleurayn"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
